<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_ChargerType" Id="{3190cf08-72e3-4734-a580-3fd579bfaff1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ChargerType :
(
	TDK12kV := 0,
	TDK30kV := 1,
	TDK50kV := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>