<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="HMI_DB" Id="{fadcefff-0de5-4c32-89a9-d04e4615e636}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	TDKLoad		: ARRAY [1..6] OF ST_Setpoints_Base; //or RETAIN
	
	ChargerHVOFF_rlyDelayPT		: TIME := T#25MS;
	ChargerHVOFF_rlyDelayPT_INT	: INT := 25;
	
	HVONdelayPT					: TIME := T#250MS;
	HVONdelayPT_INT				: INT := 250;
	
	RunOutTMR_PT				: TIME := T#10S;
	RunOutTMR_PT_INT			: DINT := 10;
	RunOutTMR_elapse			: DINT;
	
	ChargingRunOutTMR_elapse	: INT;
END_VAR

VAR_GLOBAL
	ChargePB	: BOOL := 0;
	DumpPB		: BOOL := 0;
	AbortPB		: BOOL := 0;
	FirePB		: BOOL := 0;
	ClearFaultPB	: BOOL := 0;
	AllDumpRelaysOpenBP	: BOOL := 0;
	AllChargeRelayCloseBP	: BOOL := 0;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>